--- a/roles/elastic/tasks/check_elasticsearch_health.yml
+++ b/roles/elastic/tasks/check_elasticsearch_health.yml
@@ -4,24 +4,26 @@
     url: http://{{ item }}:9200/_cluster/health
     return_content: yes
     use_proxy: no
-  loop: "{{ elastic_servers | list }}"
+  loop: "{{ elastic_servers }}"
   register: cluster_health
+
+- name: debug
+  debug:
+    var: cluster_health
     
 - name: Send message when elastic cluster health is not green
   slack:
     token: "{{ slack_token }}"
-    msg: Elasticsearch cluster status is {{ item.status }}, maybe one node is down.
-  loop: 
-    - "{{ cluster_health.json }}"
-  when: item.status != 'green'
-  delegate_to: "{{ delegate_to }}"
+    msg: Elasticsearch cluster status is {{ item.json.status }}, maybe one node is down.
+  loop: "{{ cluster_health.results }}"
+  when: item.json.status == 'green'
+#  delegate_to: "{{ delegate_to }}"
     
 - name: Send message when elastic cluster is relocating shards
   slack:
     token: "{{ slack_token }}"
-    msg: Elasticsearch cluster is relocating shards, shards being relocated={{ item.relocating_shards }}.
-  loop: 
-    - "{{ cluster_health.json }}"
-  when: item.relocating_shards > 0
-  delegate_to: "{{ delegate_to }}"
+    msg: Elasticsearch cluster is relocating shards, shards being relocated={{ item.json.relocating_shards }}.
+  loop: "{{ cluster_health.results }}"
+  when: item.json.relocating_shards > 0
+#  delegate_to: "{{ delegate_to }}"
 
